--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <div class="container">
     <link rel="stylesheet" href="style.css">
     <script src="dev.js"></script>
-    <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt=""><br><br><br>
     <h1 class="page-title">
         Conversor de Valor
       </h1>
     <p class="page-subtitle">
-      Converta Real para Dolar U$</p><br><br><br><br>
+      Converta Dolar para Real U$</p><br><br><br><br>
     <label for="moeda">Insira o valor</label><br>
     <input type="number" id="valor" size="2" /><br>
     <button type="submit" onclick="Converter()">Converter</button>
     <h4 id="valorConvertido"></h4>
   </div>
   <a href="https://alura.com.br/" target="_blank">
-    <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
    
